--- a/default.project.json
+++ b/default.project.json
@@ -1,48 +1,51 @@
 {
-    "name": "Boilerplate Project",
-    "globIgnorePaths": [
-        "src/**/*.spec.lua",
-        "Packages/**/*.spec.lua"
-    ],
+    "name": "Boilerplate Project V2",
     "tree": {
-        "$className": "DataModel",
-        "$ignoreUnknownInstances": true,
-        "ReplicatedStorage": {
-            "$ignoreUnknownInstances": true,
-            "$className": "ReplicatedStorage",
-            "$path": "src/ReplicatedStorage",
-            "Shared": {
-                "$className": "Folder",
-                "$path": "src/Shared"
-            },
-            "Packages": {
-                "$className": "Folder",
-                "$path": "Packages"
-            }
+      "$className": "DataModel",
+  
+      "ReplicatedStorage": {
+        "$className": "ReplicatedStorage",
+  
+        "Shared": {
+          "$path": "src/Shared"
         },
-        "ServerScriptService": {
-            "$ignoreUnknownInstances": true,
-            "$className": "ServerScriptService",
-            "$path": "src/ServerRunner"
+  
+        "Assets": {
+          "$className": "Folder"
         },
-        "ServerStorage": {
-            "$ignoreUnknownInstances": true,
-            "$className": "ServerStorage",
-            "$path": "src/Server"
+  
+        "GameVersion": {
+          "$path": "src/GameVersion.txt"
         },
-        "ReplicatedFirst": {
-            "$ignoreUnknownInstances": true,
-            "$className": "ReplicatedFirst",
-            "$path": "src/ReplicatedFirst"
-        },
-        "StarterPlayer": {
-            "$ignoreUnknownInstances": true,
-            "$className": "StarterPlayer",
-            "StarterPlayerScripts": {
-                "$ignoreUnknownInstances": true,
-                "$className": "StarterPlayerScripts",
-                "$path": "src/Client"
-            }
+
+        "Packages": {
+            "$className": "Folder",
+            "$path": "Packages"
         }
+      },
+  
+      "ServerStorage": {
+        "$className": "ServerStorage",
+  
+        "Assets": {
+          "$className": "Folder"
+        }
+      },
+  
+      "ServerScriptService": {
+        "$className": "ServerScriptService",
+        
+        "Server": {
+          "$path": "src/Server"
+        }
+      },
+  
+      "ReplicatedFirst": {
+        "$className": "ReplicatedFirst",
+  
+        "Client": {
+          "$path": "src/Client"
+        }
+      }
     }
-}
+  }
