--- a/wally.toml
+++ b/wally.toml
@@ -6,3 +6,8 @@ realm = "shared"
 
 [dependencies]
 Knit = "sleitnick/knit@1.5.3"
+Promise = "evaera/promise@4.0.0"
+Signal = "sleitnick/signal@1.5.0"
+Janitor = "howmanysmall/janitor@1.15.6"
+t = "shanebutt/t@1.3.1"
+Timer = "sleitnick/timer@1.1.2"
