--- a/wally.toml
+++ b/wally.toml
@@ -12,3 +12,5 @@ Janitor = "howmanysmall/janitor@1.15.6"
 t = "shanebutt/t@1.3.1"
 Timer = "sleitnick/timer@1.1.2"
 replica = "luarook/replica@0.2.2"
+Net = "sleitnick/net@0.1.0"
+Trove = "sleitnick/trove@0.5.0"
