--- a/wally.toml
+++ b/wally.toml
@@ -11,3 +11,4 @@ Signal = "sleitnick/signal@1.5.0"
 Janitor = "howmanysmall/janitor@1.15.6"
 t = "shanebutt/t@1.3.1"
 Timer = "sleitnick/timer@1.1.2"
+trove = "sleitnick/trove@1.0.1"
