--- a/wally.toml
+++ b/wally.toml
@@ -1,5 +1,5 @@
 [package]
-name = "jesse/roblox-dsac-boilerplate"
+name = "suit-up-repos/roblox-dsac-boilerplate"
 version = "0.1.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
@@ -12,4 +12,4 @@ Janitor = "howmanysmall/janitor@1.15.6"
 t = "shanebutt/t@1.3.1"
 Timer = "sleitnick/timer@1.1.2"
 trove = "sleitnick/trove@1.0.1"
-GameAnalytics = "gameanalytics/gameanalytics-sdk@2.2.3"
+GameAnalytics = "dig1t/gameanalytics-sdk@2.2.4"
